--- a/frontend/frontend-project/package.json
+++ b/frontend/frontend-project/package.json
@@ -21,6 +21,7 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
